@@ -1,3 +1,10 @@
+2006-09-28  Josh Stone  <joshua.i.stone@intel.com>
+
+	PR 3278
+	* tapsets.cxx (hrtimer_derived_probe::emit_probe_entries): Only
+	restart timers when the session is still active and we updated the
+	expire time.
+
 2006-09-27  Josh Stone  <joshua.i.stone@intel.com>
 
 	* session.h (struct systemtap_session): Add kernel_base_release
